# cdsw-job-launcher

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
cdswjoblauncher/: contract.py
cdswjoblauncher/cdsw/: .gitignore  cdsw_common.py  cdsw_config.py  cdsw_runner.py  constants.py  start_job.py  utils.py
cdswjoblauncher/cdsw/libreloader/: reload_dependencies.py
cdswjoblauncher/cdsw/testutils/: test_utils.py
cdswjoblauncher/cli/: cli.py
cdswjoblauncher/commands/: cmd_type.py  send_latest_command_data_in_mail.py  zip_latest_command_data.py
cdswjoblauncher/core/: config.py  context.py  error.py  handler.py  module.py
cdswjoblauncher/tests/cdsw/common/: test_cdsw_config_reader.py
junit/: test-results-3.8.xml
logs/: pytest-logs.txt
testmodule/: main_script.py
testmodule/cdsw/mod1/mod2/: cdsw_test_mod.py
testmodule/cdsw/scripts/: initial-cdsw-setup.sh  install-requirements.sh
tests/cdsw/common/: test_cdsw_config_reader.py  test_cdsw_runner.py  test_cdsw_runner_jobs_e2e.py
tests/cdsw/common/configfiles/: cdsw_job_config.py  cdsw_job_config_bad_command_type.py  cdsw_job_config_drive_api_upload_settings_with_vars.py  cdsw_job_config_email_body_file.py  cdsw_job_config_email_settings_with_vars.py  cdsw_job_config_empty_yarndevtools_args.py  cdsw_job_config_env_var_sanitize_test.py  cdsw_job_config_invalid_optional_env_var.py  cdsw_job_config_invalid_using_builtin_variable.py  cdsw_job_config_runconfig_defined_main_script_arguments_env_vars.py  cdsw_job_config_runconfig_defined_main_script_arguments_overrides.py  (+12 more)
(+15 files in other folders)
