[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "cdsw-job-launcher"
version = "1.0.3"
description = ""
authors = ["Szilard Nemeth <szilard.nemeth88@gmail.com>"]
readme = "README.md"
packages = [{include = "cdswjoblauncher"}]

[tool.poetry.dependencies]
python = "^3.8"
python-common-lib = "1.0.11"
google-api-wrapper2 = "1.0.12"
requests = "^2.28.1"
docker = "^6.0.0"
pytest = ">=6.2.3,<6.3.0"
dataclasses-json = "^0.5.7"
dacite = "^1.8.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = ">=6.2.3,<6.3.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
dataclasses-json = "^0.5.7"
black = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
